syntax = "proto3";

package airspecs.bluetooth;

import "nanopb.proto";

import "firmware/sensor.proto";

message SensorPacket {
    message Metadata {
        uint32 specs_id = 1;
        uint64 uptime = 2;
        uint64 seq = 3;
    };

    message Sample {
        message Metadata {
            uint32 uptime = 1;
            uint32 seq = 2;
        };

        Metadata metadata = 1;
        firmware.sensor.AnyValue value = 2;
    }

    Metadata meta = 1;
    repeated Sample payload = 2 [(nanopb).max_count = 1];
}

